Tweaked Generator to use ArrayQue for logging moves.
Signed-off-by: poof <jmal2424@gmail.com>